# SANA-FE

./: .clang-format  .clang-tidy  .gitignore  .module.cpp.archive  .module.hpp.archive  .parse.c  .parse.h  .readthedocs.yaml  CMakeLists.txt  MANIFEST.in  Makefile  README.md  TUTORIAL.md  __init__.py  arch.c  arch.cpp  arch.h  arch.hpp  command.c  command.cpp  command.h  command.hpp  conda_env.yaml  description.c  description.cpp  description.h  description.hpp  dockerfile  example.list  git_status.sh  hardware.cpp  hardware.hpp  llm.txt  loihi.arch  loihi.list  loihi.tech  loihi.yaml  loihi_largest.arch  main.c  main.cpp  (+41 more)
.github/workflows/: build_wheels.yml
arch/: README.md  demo_with_dendrites.yaml  dendrites.yaml  example.yaml  loihi.arch  loihi.yaml  loihi_big.arch  loihi_big.yaml  loihi_dvs.yaml  loihi_large.yaml  loihi_latin.yaml  loihi_random.yaml  loihi_with_noise.yaml  neurofem.yaml  neuroscale.yaml  truenorth.yaml  tutorial.yaml
backends/: fugu.py  lava.py
ci/: check_build.rb  check_cppcheck.rb  check_dynamic.rb  check_format.rb  check_tidy.rb  run.rb
docker/sana-fe/: Dockerfile  run.sh  script.sh
docker/sana-fe-ci/: Dockerfile  run_ci.sh
docker/sana-fe-python/: Dockerfile  build_wheels.sh
docs/: api.rst  conf.py  data.rst  index.rst  layers.rst  make_model_descriptions.py  make_references.py  models.rst  requirements.txt  viz.rst
docs/_static/: make_logo_white.css
docs/models/: accumulator.rst  accumulator_with_delay.rst  current_based.rst  framework.rst  input.rst  leaky_integrate_and_fire.rst  taps.rst  truenorth.rst
examples/: inputs.net  outputs.csv  random_network.csv  random_network.net  truenorth_bursting.net  truenorth_phasic.net
plugins/: CMakeLists.txt  README.md  hodgkin_huxley.cpp  input_dummy.cpp  loihi_lif.cpp  neurofem.cpp
sanafe/: README.txt  __init__.py  _examples.py  data.py  fugu.py  lava.py  layers.py  tutorial.py
sanafe/data/: __init__.py  arch_testing.yaml  traces.py
sanafe/examples/: dvs_challenge.npz  example_chip.yaml  example_snn.yaml  loihi.yaml  tutorial_arch.yaml
sanafe/viz/: __init__.py  performance.py  potential.py  raster.py  styles.py
scripts/: booksim.config  calibration.py  capstone_gui_runtime.py  challenge.py  compare_nemo_perf.py  compare_spiketrains.py  compress_spiketrain.py  connected_layers_experiment.py  create_tutorial.py  demo_truenorth.py  dendrites.py  design_space_exploration.py  dvs_gesture.py  git_status.sh  interception.py  lasagna.py  lasana.py  latin_squares.py  load_network.py  message_analysis.py  misc_dvs_conversion.py  net_to_yaml.py  networking.py  old_utils.py  plot_characterization.py  plot_messages.py  power_benchmark.py  queue_transient.py  random_network.py  run.py  run_arch_testing.py  scaling.py  test_api.py  test_performance_viz.py  test_potential_viz.py  test_pybind.py  test_raster_viz.py  tutorial.py
scripts/computer2026/: combined.py  crossbar.py  indiveri.py  synapse.py
scripts/icons2023/: power_benchmark.py
scripts/ongoing/: crossbar.py  detail.py  indiveri.py  llm.py  neurofem.py  scaling.py  synapse.py
scripts/tcad2025/: compare_nemo_perf.py  demo_truenorth.py  design_space_exploration.py  dvs_gesture.py  latin_squares.py  random_network.py
snn/: README.md  conv.yaml  dendrite.net  dendrite.yaml  dvs.yaml  example.net  example.yaml  example_annotated.yaml  example_snn.yaml  hh_example.net  input_net.yaml  tutorial.net
snn/nemo/: truenorth_bursting.net  truenorth_phasic.net
src/: arch.cpp  arch.hpp  arg_parsing.cpp  arg_parsing.hpp  attribute.hpp  chip.cpp  chip.hpp  core.cpp  core.hpp  description.cpp  description.hpp  docstrings.hpp  fwd.hpp  hardware.cpp  hardware.hpp  main.cpp  mapped.cpp  mapped.hpp  message.cpp  message.hpp  models.cpp  models.hpp  netlist.cpp  netlist.hpp  network.cpp  network.hpp  param.hpp  pipeline.cpp  pipeline.hpp  plugins.cpp  plugins.hpp  print.cpp  print.hpp  pymodule.cpp  pytrace.cpp  pytrace.hpp  schedule.cpp  schedule.hpp  sim.cpp  sim.hpp  (+12 more)
tests/: CMakeLists.txt  README.md  check_coverage.sh  tests.cpp
tests/ci/: check_build.rb  check_cppcheck.rb  check_dynamic.rb  check_format.rb  check_perf.rb  check_tidy.rb  perf_baseline.txt  run.rb
tests/unit/: CMakeLists.txt  test_accumulator.cpp  test_base.cpp  test_basic_input.cpp  test_connect_neurons_sparse.cpp  test_current_based_synapse.cpp  test_inputmodel.cpp  test_loihi_lif.cpp  test_multitap.cpp  test_new_noc.cpp  test_truenorth.cpp  test_yaml_arch.cpp  test_yaml_snn.cpp
tests/unit_tests/: CMakeLists.txt  test_accumulator.cpp  test_base.cpp  test_basic_input.cpp  test_current_based_synapse.cpp  test_inputmodel.cpp  test_loihi_lif.cpp  test_loihi_synapse.cpp  test_multitap.cpp  test_truenorth.cpp  test_yaml_arch.cpp  test_yaml_snn.cpp
tutorial/: TUTORIAL.md  arch.yaml  arch_results  dockerfile  dvs_challenge.py  plot.py  run_results  setup_tutorial.sh  snn.net  snn.yaml  snn_results  tutorial.ipynb  tutorial_0_intro.ipynb  tutorial_1_architecture.ipynb  tutorial_2_snns.ipynb  tutorial_3_api.ipynb  tutorial_4_traces.ipynb  tutorial_5_dvs.ipynb
tutorial/solutions/: arch_completed.yaml  snn_completed.net
